--- a/.github/workflows/helm_package.yaml
+++ b/.github/workflows/helm_package.yaml
@@ -1,8 +1,15 @@
-name: Lint Charts
+name: Helm Publish
 
-on: pull_request
+on:
+  push:
+    branches:
+      - dev
 
-action "Package stable charts" {
-  uses = "flydiverny/helm-package-action@master"
-  args = "./stable"
-}
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: J12934/helm-gh-pages-action@master
+        with:
+          access-token: ${{ secrets.ACCESS_TOKEN }}
