--- a/.github/workflows/helm_package.yaml
+++ b/.github/workflows/helm_package.yaml
@@ -9,4 +9,4 @@ jobs:
       - uses: actions/checkout@v1
       - uses: J12934/helm-gh-pages-action@master
         with:
-          access-token: ${{ secrets.GITHUB_ACTIONS_ACCESS_TOKEN }}
+          access-token: ${{ secrets.ACTIONS_ACCESS_TOKEN }}
