--- a/.github/workflows/helm_package.yaml
+++ b/.github/workflows/helm_package.yaml
@@ -10,4 +10,4 @@ jobs:
       - uses: J12934/helm-gh-pages-action@master
         with:
           access-token: ${{ secrets.ACTIONS_ACCESS_TOKEN }}
-          charts-folder: cohort-service
+          charts-folder: cohort-service/chart
