--- a/.github/workflows/helm_package.yaml
+++ b/.github/workflows/helm_package.yaml
@@ -1,13 +1,30 @@
-name: Helm Publish
+name: Release Charts
 
-on: push
+on:
+  push:
+    branches:
+      - main
 
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: J12934/helm-gh-pages-action@master
+      - name: Checkout
+        uses: actions/checkout@v2
         with:
-          access-token: ${{ secrets.ACTIONS_ACCESS_TOKEN }}
-          charts-folder: helm-charts/health-patterns
+          fetch-depth: 0
+
+      - name: Configure Git
+        run: |
+          git config user.name "$GITHUB_ACTOR"
+          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+
+      - name: Install Helm
+        uses: azure/setup-helm@v1
+        with:
+          version: v3.4.0
+
+      - name: Run chart-releaser
+        uses: helm/chart-releaser-action@v1.2.1
+        env:
+          CR_TOKEN: "${{ secrets.ACTIONS_ACCESS_TOKEN }}"
