--- a/.github/workflows/helm_package.yaml
+++ b/.github/workflows/helm_package.yaml
@@ -25,3 +25,5 @@ jobs:
         uses: helm/chart-releaser-action@v1.2.1
         env:
           CR_TOKEN: "${{ secrets.ACTIONS_ACCESS_TOKEN }}"
+        with:
+          charts_dir: cohort-service/chart
